--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,10 @@ import "../styles/global.css";
 		<div class="nav-container">
 			<a class="brand" href="/">SAE301</a>
 			<ul class="nav-list">
-				<li><a href="/testpb" class="nav-link">Test Pb</a></li>
+				<li>
+					<a href="/testpb" class="nav-link">Test Pb</a>
+					<a href="/login" class="nav-link">Login</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
