--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,89 @@
 @import "tailwindcss";
+
+@plugin "daisyui" {
+    themes: all
+}
+
+@plugin "daisyui/theme" {
+    name: "SAE301";
+    default: true;
+    prefersdark: false;
+    color-scheme: "light";
+    --color-base-100: #F8F8F8;
+    --color-base-200: oklch(0.929 0.000 327.3);
+    --color-base-300: hsl(300.0 0.0% 72.9%);
+    --color-base-content: #343434;
+    --color-primary: #0A3380;
+    --color-primary-content: oklch(100% 0 0);
+    --color-secondary: oklch(0.211 0.138 261.6);
+    --color-secondary-content: oklch(100% 0 0);
+    --color-accent: #D3A852;
+    --color-accent-content: #343434;
+    --color-neutral: oklch(27% 0.041 260.031);
+    --color-neutral-content: oklch(100% 0 0);
+    --color-info: oklch(88.127% 0.085 214.515);
+    --color-info-content: #343434;
+    --color-success: oklch(84% 0.143 164.978);
+    --color-success-content: #343434;
+    --color-warning: oklch(83% 0.128 66.29);
+    --color-warning-content: #343434;
+    --color-error: oklch(70% 0.191 22.216);
+    --color-error-content: #343434;
+    --radius-selector: 1rem;
+    --radius-field: 1rem;
+    --radius-box: 1rem;
+    --size-selector: 0.28125rem;
+    --size-field: 0.28125rem;
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@theme {
+    /* font */
+    --font-comorant: 'Cormorant Garamond', serif;
+    --font-inter: 'Inter', sans-serif;
+}
+
+@layer base {
+    body {
+        font-family: var(--font-inter);
+        color: var(--color--content);
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        font-family: "Cormorant Garamond";
+        line-height: 160%;
+        font-style: normal;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 64px;
+        font-weight: 700;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 48px;
+        font-weight: 700;
+    }
+
+    h3 {
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+    h4 {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 150%;
+    }
+}
