--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -95,7 +95,7 @@ if (user) {
       const formData = new FormData(form);
 
       // Envoi des informations au serveur via l'API /api/login
-      const res = await fetch("/api/login", {
+      const res = await fetch("/api2/login", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
