--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -90,7 +90,7 @@ if (Astro.locals.user) {
 
       const password = formData.get("password");
 
-      const res = await fetch("/api/signup", {
+      const res = await fetch("/api2/signup", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
