--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
           <li><a href="/generator">Créer ma paire</a></li>
           <li><a href="/gallery">Galerie</a></li>
           <li>
-            <form method="POST" action="/api/logout">
+            <form method="POST" action="/api2/logout">
               <button
                 type="submit"
                 class="btn btn-outline btn-base bg-accent text-accent-content w-full"
@@ -68,7 +68,7 @@
     </div>
 
     <div class="navbar-end hidden lg:flex">
-      <form method="POST" action="/api/logout">
+      <form method="POST" action="/api2/logout">
         <button
           type="submit"
           class="btn btn-outline btn-xl bg-accent text-accent-content"
