--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -44,15 +44,15 @@ if (user) {
   <div
     class="min-h-screen flex items-center justify-center px-4 flex-col h-full glass bg-primary"
   >
-    <div class="card w-full max-w-md shadow-2xl bg-base-100">
-      <div class="card-body">
+    <div class="card w-sm max-w-md shadow-2xl bg-base-100">
+      <div class="card-body w-full">
         <h1
-          class="card-title lg:text-5xl mb-6 justify-center text-center text-primary font-bold"
+          class=" text-2xl md:text-3xl lg:text-4xl mb-6 justify-center text-center text-primary font-bold"
         >
           Connexion
         </h1>
         <!-- Formulaire de connexion -->
-        <form id="login-form" class="flex flex-col gap-5">
+        <form id="login-form" class="flex flex-col gap-5 w-full">
           <input
             type="email"
             name="email"
@@ -67,12 +67,12 @@ if (user) {
             required
             class="input input-bordered input-primary w-full"
           />
-          <button type="submit" class="btn btn-primary w-full btn-lg">
+          <button type="submit" class="btn btn-primary w-full btn-base">
             Connexion
           </button>
         </form>
         <p id="status" class="mt-4 text-center text-error"></p>
-        <p class="mt-2 text-center">
+        <p class="mt-2 text-center text-base w-full">
           Pas de compte ?
           <a href="/signup" class="link link-primary">Créer un compte</a>
         </p>
@@ -117,6 +117,4 @@ if (user) {
       }
     });
   </script>
-
-
 </html>
