--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,10 @@
           <li><a href="/generator">Créer ma paire</a></li>
           <li><a href="/gallery">Galerie</a></li>
           <li>
-            <form method="POST" action="/api2/logout">
+            <form
+              method="POST"
+              action="https://sae301.eva-lacroix.fr/api2/logout"
+            >
               <button
                 type="submit"
                 class="btn btn-outline btn-base bg-accent text-accent-content w-full"
