--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
       <div>
         <a href="/" class="flex items-center gap-4 mb-4">
           <img
-            src="/src/assets/icon/logo.png"
+            src="/public/icon/logo.png"
             alt="Logo TaVue"
             class="h-12 w-auto"
           />
@@ -22,7 +22,7 @@
             class="btn btn-circle btn-ghost bg-accent hover:bg-accent/80 transition-transform hover:scale-110"
           >
             <svg
-              xmlns="http://www.w3.org/2000/svg"
+              xmlns="https://www.w3.org/2000/svg"
               class="h-5 w-5"
               fill="currentColor"
               viewBox="0 0 24 24"
