--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
           aria-label="Ouvrir le menu"
         >
           <svg
-            xmlns="http://www.w3.org/2000/svg"
+            xmlns="https://www.w3.org/2000/svg"
             class="h-8 w-8"
             fill="none"
             viewBox="0 0 24 24"
@@ -44,7 +44,7 @@
 
       <a href="/" aria-label="Accueil" class="flex items-center gap-3">
         <img
-          src="/src/assets/icon/logo.png"
+          src="/public/icon/logo.png"
           alt="Logo"
           class="w-24 h-10 lg:w-36 lg:h-16"
         />
