--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,6 +1,7 @@
 ---
 //@ts-nocheck
 import "../styles/global.css";
+import { Image } from "astro:assets";
 
 const user = Astro.locals.user;
 
@@ -42,9 +43,19 @@ if (user) {
     </script>
   </head>
   <div
-    class="min-h-screen flex items-center justify-center px-4 flex-col h-full glass bg-primary"
+    class="min-h-screen flex items-center justify-center px-4 flex-col h-full glass bg-secondary"
   >
-    <div class="card w-sm max-w-md shadow-2xl bg-base-100">
+  <a href="/" class="fixed top-4 left-4 z-50">
+      <Image
+        src="/public/icon/logo.png"
+        alt="TaVue logo"
+        width={24}
+        height={10}
+        class="w-24 h-10 lg:w-36 lg:h-16 object-contain"
+        loading="lazy"
+      />
+    </a>
+    <div class="card w-xs lg:w-sm max-w-md shadow-2xl bg-base-100">
       <div class="card-body w-full">
         <h1
           class="text-2xl md:text-3xl lg:text-4xl mb-6 justify-center text-center text-primary font-bold"
@@ -58,21 +69,21 @@ if (user) {
             name="email"
             placeholder="Email"
             required
-            class="input input-bordered input-primary w-full"
+            class="input input-bordered input-primary w-full text-xs lg:text-sm"
           />
           <input
             type="password"
             name="password"
             placeholder="Mot de passe"
             required
-            class="input input-bordered input-primary w-full"
+            class="input input-bordered input-primary w-full text-xs lg:text-sm"
           />
           <button type="submit" class="btn btn-primary w-full btn-base">
             Connexion
           </button>
         </form>
-        <p id="status" class="mt-4 text-center text-error"></p>
-        <p class="mt-2 text-center text-base w-full">
+        <p id="status" class="mt-4 text-center text-error text-base lg:text-xl"></p>
+        <p class="mt-2 text-center text-sm lg:text-base">
           Pas de compte ?
           <a href="/signup" class="link link-primary">Créer un compte</a>
         </p>
