--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -47,7 +47,7 @@ if (Astro.locals.user) {
   >
     <a href="/" class="fixed top-4 left-4 z-50">
       <Image
-        src="/src/assets/icon/logo.png"
+        src="/public/icon/logo.png"
         alt="TaVue logo"
         width={24}
         height={10}
@@ -58,7 +58,7 @@ if (Astro.locals.user) {
     <div class="card w-xs lg:w-sm max-w-md shadow-2xl bg-base-100">
       <div class="card-body">
         <h1
-          class="text-2xl md:text-3xl lg:text-4xl mb-2 lg:mb-6 justify-center text-center text-primary font-bold"
+          class="text-2xl md:text-3xl lg:text-4xl mb-6 justify-center text-center text-primary font-bold"
         >
           S'inscrire
         </h1>
@@ -95,8 +95,9 @@ if (Astro.locals.user) {
             class="input input-bordered input-primary w-full text-xs lg:text-sm"
           />
 
-          <button type="submit" class="btn btn-primary w-full btn-base lg:btn-lg"
-            >S'inscrire</button
+          <button
+            type="submit"
+            class="btn btn-primary w-full btn-base lg:btn-lg">S'inscrire</button
           >
         </form>
 
