feat: update layout and styling for homepage and login page; improve authentication flow

--- a/src/components/Header_LP.astro
+++ b/src/components/Header_LP.astro
@@ -83,6 +83,13 @@ import { Image } from "astro:assets";
           >Déconnexion</button
         >
       </form>
+      <form method="POST" action="/login">
+        <button
+          type="submit"
+          class="btn btn-outline btn-xl bg-accent text-accent-content"
+          >Connexion</button
+        >
+      </form>
     </div>
   </nav>
 </header>
