--- a/src/components/Header_LP.astro
+++ b/src/components/Header_LP.astro
@@ -87,10 +87,8 @@ import { Image } from "astro:assets";
       </form>
       <form method="POST" action="/login">
         <button
-          type="submit"
           class="btn btn-outline btn-xl bg-accent text-accent-content"
-          >Connexion</button
-        >
+          >Connexion</button>
       </form>
     </div>
   </nav>
